chandeliers-lus/tests/fail/ui/tc/trailing.rs
chandeliers_lus::decl! {
    node foo() returns ();
    let
        () = ((),);
    tel;
}

fn main() {}
